--- a/DPS_Diablo3/DPS_Diablo3.csproj
+++ b/DPS_Diablo3/DPS_Diablo3.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{7C6579ED-9B96-492F-AE75-4C022830AFF5}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dps_Diablo3</RootNamespace>
+    <RootNamespace>DPS_Diablo3</RootNamespace>
     <AssemblyName>DPS_Diablo3</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
@@ -50,6 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class_sets.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Class_keys.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,11 +92,16 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\loading_bar.gif" />
     <None Include="Resources\diablo3.ico" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="bin\Debug\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\loading_bar.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
