--- a/DPS_Diablo3/app.config
+++ b/DPS_Diablo3/app.config
@@ -200,7 +200,7 @@
                 <value>True</value>
             </setting>
             <setting name="bt_lang" serializeAs="String">
-                <value>ENG</value>
+                <value />
             </setting>
         </DPS_Diablo3.Properties.Settings>
     </userSettings>
