--- a/DPS_Diablo3/DPS_Diablo3.csproj
+++ b/DPS_Diablo3/DPS_Diablo3.csproj
@@ -50,6 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class_faq.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Class_sets.cs">
       <SubType>Form</SubType>
     </Compile>
