--- a/DPS_Diablo3/Properties/Settings.settings
+++ b/DPS_Diablo3/Properties/Settings.settings
@@ -195,7 +195,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="bt_lang" Type="System.String" Scope="User">
-      <Value Profile="(Default)">ENG</Value>
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
