--- a/DPS_Diablo3/app.config
+++ b/DPS_Diablo3/app.config
@@ -11,13 +11,13 @@
                 <value />
             </setting>
             <setting name="tb_damage2" serializeAs="String">
-                <value>Weapon 2</value>
+                <value>weapon2</value>
             </setting>
             <setting name="tb_ac1" serializeAs="String">
                 <value />
             </setting>
             <setting name="tb_ac2" serializeAs="String">
-                <value>Weapon 2</value>
+                <value>weapon2</value>
             </setting>
             <setting name="tb_main" serializeAs="String">
                 <value />
@@ -107,10 +107,10 @@
                 <value>max2</value>
             </setting>
             <setting name="tb_dmg1_p" serializeAs="String">
-                <value>Weapon 1</value>
+                <value>weapon1</value>
             </setting>
             <setting name="tb_dmg2_p" serializeAs="String">
-                <value>Weapon 2</value>
+                <value>weapon2</value>
             </setting>
             <setting name="tb_skill1" serializeAs="String">
                 <value />
@@ -137,10 +137,10 @@
                 <value>skill2</value>
             </setting>
             <setting name="tb_ac1_p" serializeAs="String">
-                <value>Weapon 1</value>
+                <value>weapon1</value>
             </setting>
             <setting name="tb_ac2_p" serializeAs="String">
-                <value>Weapon 2</value>
+                <value>weapon2</value>
             </setting>
             <setting name="tb_dmg1_w" serializeAs="String">
                 <value />
