--- a/DPS_Diablo3/app.config
+++ b/DPS_Diablo3/app.config
@@ -2,10 +2,31 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="DPS_Diablo3.Properties.Paragon" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="DPS_Diablo3.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
+        <DPS_Diablo3.Properties.Paragon>
+            <setting name="nud_para_main" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="nud_para_as" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="nud_para_cdr" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="nud_para_cc" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="nud_para_cd" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="lb_para_lvl" serializeAs="String">
+                <value />
+            </setting>
+        </DPS_Diablo3.Properties.Paragon>
         <DPS_Diablo3.Properties.Settings>
             <setting name="tb_damage1" serializeAs="String">
                 <value />
@@ -200,6 +221,24 @@
                 <value>True</value>
             </setting>
             <setting name="bt_lang" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="nud_para_main" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="nud_para_as" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="nud_para_cdr" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="nud_para_cc" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="nud_para_cd" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="lb_para_lvl" serializeAs="String">
                 <value />
             </setting>
         </DPS_Diablo3.Properties.Settings>
