--- a/DPS_Diablo3/DPS_Diablo3.csproj
+++ b/DPS_Diablo3/DPS_Diablo3.csproj
@@ -69,7 +69,13 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Paragon.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="Properties\Paragon.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Paragon.settings</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="dps_diablo.resx">
       <DependentUpon>dps_diablo.cs</DependentUpon>
     </EmbeddedResource>
@@ -93,6 +99,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Properties\Paragon.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Paragon.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\diablo3.ico" />
