--- a/DPS_Diablo3/app.config
+++ b/DPS_Diablo3/app.config
@@ -241,6 +241,36 @@
             <setting name="lb_para_lvl" serializeAs="String">
                 <value />
             </setting>
+            <setting name="web1_name" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="web2_name" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="web3_name" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="web4_name" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="web5_name" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="web1_www" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="web2_www" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="web3_www" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="web4_www" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="web5_www" serializeAs="String">
+                <value />
+            </setting>
         </DPS_Diablo3.Properties.Settings>
     </userSettings>
 </configuration>
