--- a/DPS_Diablo3/app.config
+++ b/DPS_Diablo3/app.config
@@ -271,6 +271,18 @@
             <setting name="web5_www" serializeAs="String">
                 <value />
             </setting>
+            <setting name="nud_cdr11" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="nud_cdr12" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="from_skl_prof" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="pers_name" serializeAs="String">
+                <value />
+            </setting>
         </DPS_Diablo3.Properties.Settings>
     </userSettings>
 </configuration>
