--- a/DPS_Diablo3/Properties/Settings.settings
+++ b/DPS_Diablo3/Properties/Settings.settings
@@ -257,5 +257,11 @@
     <Setting Name="pers_name" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="nud_cdr13" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="nud_elite_w" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
