--- a/DPS_Diablo3/app.config
+++ b/DPS_Diablo3/app.config
@@ -283,6 +283,12 @@
             <setting name="pers_name" serializeAs="String">
                 <value />
             </setting>
+            <setting name="nud_cdr13" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="nud_elite_w" serializeAs="String">
+                <value>0</value>
+            </setting>
         </DPS_Diablo3.Properties.Settings>
     </userSettings>
 </configuration>
