--- a/DPS_Diablo3/app.config
+++ b/DPS_Diablo3/app.config
@@ -289,6 +289,9 @@
             <setting name="nud_elite_w" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="nud_cdr14" serializeAs="String">
+                <value>0</value>
+            </setting>
         </DPS_Diablo3.Properties.Settings>
     </userSettings>
 </configuration>
